# whatsappSalesGoogleSheets

./: .dockerignore  .gitignore  Dockerfile  README.md  config.sample.toml  docker-compose.yml  pyproject.toml
bot/: __main__.py  config.py  loader.py
bot/google_drive/: upload.py
bot/google_sheets/: base.py  config.py  sales.py
bot/schemas/: settings.py
bot/whatsapp/: config.py  image.py  message.py  whatsapp.py
